--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gabby's Sweet Treats</title>
-        <link rel="icon" type="image/png" href="images/favicon.png"/>
+        <title>Philly Station</title>
+        <link rel="icon" type="image/png" href="images/image0.jpeg"/>
         <link href="index.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,13 +17,13 @@
         <div class="navimage">
             <div class="navbar">
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars" style=" vertical-align: middle;" aria-hidden="true"></i></a>
-                <a href="index.html"><img class="logo mobile" src="images/logo.png"></a>
+                <a href="index.html"><img class="logo mobile" src="images/image0.jpeg"></a>
                 <div class="fixed">
                     <div class="link-container" id="link-container">
                         <a class="active" href="">Home</a>
                         <a href="pages/menu.html">Menu</a>
                         <a href="pages/catering.html">Catering</a>
-                        <a class="logo-link" href="index.html"><img class="logo desktop" src="images/logo.png"></a>
+                        <a class="logo-link" href="index.html"><img class="logo desktop" src="images/image0.jpeg"></a>
                         <a href="pages/gallery.html">Gallery</a>
                         <div class="dropdown desktop-3">
                             <button class="dropbtn">About
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <img class="main-image" src="images/coverpage_1.PNG">
+            <img class="main-image" src="images/image6.jpeg">
             <!--src="images/foodtruck-2.jpg" -->
 
             <div class="overlay-wrapper" id="overlay-wrapper">
@@ -51,7 +51,7 @@
         </div>
 
         <div class="navbar-2 hide">
-            <img class="logo-2" src="images/logo.png">
+            <img class="logo-2" src="images/image0.jpeg">
             <a class="active-2" href="">Home</a>
             <a href="pages/menu.html">Menu</a>
             <a href="pages/catering.html">Catering</a>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="home-menu">
-            <img class="h-menu-img desktop-2" src="images/home-menu2.jpg">
+            <img class="h-menu-img desktop-2" src="images/image16.jpeg">
             <div class="h-menu-text">
                 <text>Our Treats</text>
                 </br> </br>
@@ -71,7 +71,7 @@
                     </br></br>Ask us for a free sample if you aren't sure which flavor you would like!
                 </p>
             </div>
-            <img class="h-menu-img mobile-2" src="images/home-menu2.jpg">
+            <img class="h-menu-img mobile-2" src="images/image16.jpeg">
         </div>
 
         <div class="home-catering">
@@ -80,11 +80,11 @@
                 </br> </br>
                 <p>Gabby’s Sweet Treats makes a conscious effort to support children of all ages who participate in extracurricular activities. Invite the Sweet Life Truck to your non-profit events, and Gabby’s Sweet Treats will donate 20% of the proceeds to your organization. We are vested in the community and are serious about doing our part to support those who support us! <a class="extra-link" href="pages/catering.html">Contact us</a> about fundraisers, school fairs, camps, sporting events, and other community events.</p>
             </div>
-                <img class="h-catering-img" src="images/home_catering2.jpg">
+                <img class="h-catering-img" src="images/image13.jpeg">
         </div>
 
         <div id="home-about">
-            <img src="images/home_about2.jpg" style="width:100%;">
+            <img src="images/image11.jpeg" style="width:100%;">
             <div class="h-about-text">
                 <text>About</text>
                 </br>
