--- a/pages/catering.html
+++ b/pages/catering.html
@@ -17,13 +17,13 @@
     <div class="navimage">
       <div class="navbar">
         <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars" style=" vertical-align: middle;" aria-hidden="true"></i></a>
-        <a href="../index.html"><img class="logo mobile" src="../images/logo.png"></a>
+        <a href="../index.html"><img class="logo mobile" src="../images/image0.jpeg"></a>
         <div class="fixed">
           <div class="link-container" id="link-container">
             <a href="../index.html">Home</a>
             <a href="../pages/menu.html">Menu</a>
             <a class="active" href="../pages/catering.html">Catering</a>
-            <a class="logo-link" href="../index.html"><img class="logo desktop" src="../images/logo.png"></a>
+            <a class="logo-link" href="../index.html"><img class="logo desktop" src="../images/image0.jpeg"></a>
             <a href="../pages/gallery.html">Gallery</a>
             <div class="dropdown desktop-3">
               <button class="dropbtn">About
@@ -44,7 +44,7 @@
       </div>
       <div class="black-back">
         <text class="title" id="catering">Catering</text>
-        <img class="main-image" src="../images/catering2.jpg">
+        <img class="main-image" src="../images/image7.jpeg">
       </div>
 
       <div class="overlay-wrapper" id="overlay-wrapper">
