--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,13 +18,13 @@
         <div class="navimage">
             <div class="navbar">
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars special" style=" vertical-align: middle;" aria-hidden="true"></i></a>
-                <a href="../index.html"><img class="logo mobile" src="../images/logo.png"></a>
+                <a href="../index.html"><img class="logo mobile" src="../images/image0.jpeg"></a>
                 <div class="fixed">
                     <div class="link-container" id="link-container">
                         <a href="../index.html">Home</a>
                         <a href="../pages/menu.html">Menu</a>
                         <a href="../pages/catering.html">Catering</a>
-                        <a class="logo-link" href="../index.html"><img class="logo desktop" src="../images/logo.png"></a>
+                        <a class="logo-link" href="../index.html"><img class="logo desktop" src="../images/image0.jpeg"></a>
                         <a href="../pages/gallery.html">Gallery</a>
                         <div class="dropdown desktop-3">
                             <button class="dropbtn">About
@@ -46,7 +46,7 @@
 
             <div class="black-back">
                 <text class="title" id="catering">Contact Us</text>
-                <img class="main-image" src="../images/contact-large2.jpg">
+                <img class="main-image" src="../images/image5.jpeg">
             </div>
 
             <div class="overlay-wrapper" id="overlay-wrapper">
