--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -19,13 +19,13 @@
         <div class="navimage">
             <div class="navbar">
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars special" style=" vertical-align: middle;" aria-hidden="true"></i></a>
-                <a href="../index.html"><img class="logo mobile" src="../images/logo.png"></a>
+                <a href="../index.html"><img class="logo mobile" src="../images/image0.jpeg"></a>
                 <div class="fixed">
                     <div class="link-container" id="link-container">
                         <a href="../index.html">Home</a>
                         <a href="../pages/menu.html">Menu</a>
                         <a href="../pages/catering.html">Catering</a>
-                        <a class="logo-link" href="../index.html"><img class="logo desktop" src="../images/logo.png"></a>
+                        <a class="logo-link" href="../index.html"><img class="logo desktop" src="../images/image0.jpeg"></a>
                         <a class="active" href="../pages/gallery.html">Gallery</a>
                         <div class="dropdown desktop-3">
                             <button class="dropbtn">About
@@ -47,7 +47,7 @@
 
             <div class="black-back">
                 <text class="title" id="catering">Gallery</text>
-                <img class="main-image" src="../images/gallery2.jpg">
+                <img class="main-image" src="../images/image13.jpeg">
             </div>
 
             <div class="overlay-wrapper-2" id="overlay-wrapper">
