--- a/pages/menu.html
+++ b/pages/menu.html
@@ -17,13 +17,13 @@
         <div class="navimage">
             <div class="navbar">
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars special" style=" vertical-align: middle;" aria-hidden="true"></i></a>
-                <a href="../index.html"><img class="logo mobile" src="../images/logo.png"></a>
+                <a href="../index.html"><img class="logo mobile" src="../images/image0.jpeg"></a>
                 <div class="fixed">
                     <div class="link-container" id="link-container">
                         <a href="../index.html">Home</a>
                         <a class="active" href="../pages/menu.html">Menu</a>
                         <a href="../pages/catering.html">Catering</a>
-                        <a class="logo-link" href="../index.html"><img class="logo desktop" src="../images/logo.png"></a>
+                        <a class="logo-link" href="../index.html"><img class="logo desktop" src="../images/image0.jpeg"></a>
                         <a href="../pages/gallery.html">Gallery</a>
                         <div class="dropdown desktop-3">
                             <button class="dropbtn">About
@@ -45,7 +45,7 @@
 
             <div class="black-back">
                 <text class="title" id="catering">Our Menu</text>
-                <img class="main-image" src="../images/menu-large2.jpg">
+                <img class="main-image" src="../images/image10.jpeg">
             </div>
 
             <div class="overlay-wrapper-2" id="overlay-wrapper">
@@ -54,7 +54,7 @@
         </div>
 
         <div class="navbar-2 hide">
-            <img class="logo-2" src="../images/logo.png">
+            <img class="logo-2" src="../images/image0.jpeg">
             <a href="../index.html">Home</a>
             <a class="active-2" href="">Menu</a>
             <a href="../pages/catering.html">Catering</a>
