--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabby's Sweet Treats | Schedule</title>
+    <title>Philly Station | Schedule</title>
     <link rel="icon" type="image/png" href="../images/favicon.png"/>
     <link href="../stylesheets/schedule.css" rel="stylesheet" type="text/css" />
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
